<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitch"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:text="@string/change_theme_string"
            app:layout_constraintBottom_toTopOf="@+id/progressSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.782" />

        <NumberPicker
            android:id="@+id/goalSetterNumberPicker"
            android:layout_width="68dp"
            android:layout_height="71dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/goalSetter"
            app:layout_constraintTop_toBottomOf="@+id/progressSwitch"
            app:layout_constraintVertical_bias="0.058"
            tools:visibility="visible">

        </NumberPicker>

        <TextView
            android:id="@+id/goalSetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_up_goal_prompt"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/goalSetterNumberPicker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressSwitch"
            app:layout_constraintVertical_bias="0.104"
            tools:visibility="visible" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/progressSwitch"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginBottom="476dp"
            android:text="@string/settings_progress_bar_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_button_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressSwitch"
            app:layout_constraintVertical_bias="0.887"
            app:srcCompat="@drawable/home_icon"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="348dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="675dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>