<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PushUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pushUpCounter"
            android:layout_width="224dp"
            android:layout_height="127dp"
            android:layout_marginTop="136dp"
            android:gravity="center"
            android:text="@string/push_up_prompt"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/pushUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/push_up_button_content_description"
            android:src="@drawable/round_button_icon"
            app:layout_constraintBottom_toTopOf="@+id/restartPushUpCounterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pushUpCounter"
            app:layout_constraintVertical_bias="0.463"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/toSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gear_icon_content_description"
            android:src="@drawable/gear_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/restartPushUpCounterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="192dp"
            android:contentDescription="@string/restart_icon_label"
            android:src="@drawable/restart_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="329dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_height="53dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/pushUpCounter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.867"
            android:progressTint="@color/green"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="675dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="348dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>